--- a/src/app/modules/developer/Components/query/query.component.html
+++ b/src/app/modules/developer/Components/query/query.component.html
@@ -45,7 +45,7 @@
     <div class="card border mt-2 mb-3" style="max-width: 25rem;">
       <div class="card-header bg-transparent border-success" style="font-weight: bold;">Query submission</div>
       <div class="card-body text-black">
-        <form (ngSubmit)="  submitQuery()" [formGroup]="queryForm">
+        <form (ngSubmit)="submitQuery()" [formGroup]="queryForm">
         <h5 class="card-title">Ask your query*</h5>
         <p class="card-text text-muted">You can also edit this once payment is done</p>
         <textarea class="form-control mb-3 p-4" id="validationTextarea" placeholder="Query" formControlName="Question" required></textarea>
@@ -60,10 +60,10 @@
           </label>
         </div>
 
-        <button class="btn btn-primary btn-block mt-2 ps-5 pe-5 mt-2" (click)="showConfirmationModal()">Send</button>
+        <button class="btn btn-primary btn-block mt-2 ps-5 pe-5 mt-2" type="submit">Send</button>
 
         <!-- Confirmation Modal -->
-        @if(isConfirmationVisible){
+        <!-- @if(isConfirmationVisible){
         <div class="modal-backdrop">
           <div class="modal-container">
             <div class="modal-header">
@@ -77,10 +77,10 @@
               <button class="btn btn-danger" (click)="cancelSend()">Cancel</button>
             </div>
           </div>
-        </div>}
+        </div>} -->
 
         <!-- Success Modal -->
-        @if(isModalVisible){
+        <!-- @if(isModalVisible){
         <div  class="modal-backdrop">
           <div class="modal-container">
             <div class="modal-header">
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-      }
+      } -->
     </form>
       </div>
     </div>
