--- a/src/app/modules/developer/Components/mentor-card/mentor-card.component.html
+++ b/src/app/modules/developer/Components/mentor-card/mentor-card.component.html
@@ -1,4 +1,5 @@
 <div class="card-client  row g-0">
+  
  <div class="user-picture col-2 mt-5">
     <img src="http://localhost:5164/{{mentor.Image}}" style="width: 100%; height: 100%; border-radius: 10px;">
   </div>
@@ -8,10 +9,11 @@
         <h2 class="name-client fw-bold mb-0 pb-0 mt-0 pt-0 " style="font-size: x-large; height: 45px; "><span>{{mentor.FirstName}}</span>&nbsp;<span>{{mentor.LastName}}</span>
         </h2>
         <p class="title-client fw-light mt-0 pt-0" style="font-size: smaller;"> {{mentor.Title}}</p>
+        <!-- <div class="hidden">{{mentor.ID}}</div> -->
       </div>
       <div class="ms-5 mt-3 " style="text-align: end;">
         <button type="button" class="btn btn-dark " style=" width: fit-content; height: 50px;"
-          [routerLink]="['/mentors', mentor.id]" routerLinkActive="active">
+          [routerLink]="['/mentors',mentor.ID]" routerLinkActive="active">
           <i class="fas fa-user"></i> View Profile
         </button>
       </div>
