--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg" >
   <div class="container-fluid">
     <!-- <a class="navbar-brand">Dev-Guide</a> -->
      <img src="logo 3_processed.jpg" class="nav-image">
@@ -46,9 +46,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="/developer/home">Home</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="/developer/userlayout">Developer</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" routerLink="/developer/mentors">Mentor</a>
         </li>
