--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -6,7 +6,9 @@ nav {
   z-index: 1000;
   background-color: rgb(255, 255, 255);
   height: 10vh;
-  border: 2px solid #415bcf ;
+  /* border: 2px solid #415bcf ; */
+  box-shadow: 2px 2px 5px rgba(175, 173, 173, 0.5);
+
 }
 
 .nav-link, .active, .navbar-brand {
