--- a/src/app/shared/components/education-list/education-list.component.html
+++ b/src/app/shared/components/education-list/education-list.component.html
@@ -13,7 +13,7 @@
   </button>
 
   <!-- List of education cards -->
-  <div *ngFor="let education of educationList">
+  <div *ngFor="let education of educationlist">
     <app-education-card [education]="education"></app-education-card>
   </div>
 
