--- a/src/app/shared/components/quizzes-list/quizzes-list.component.html
+++ b/src/app/shared/components/quizzes-list/quizzes-list.component.html
@@ -1,4 +1,6 @@
 <br>
+<br>
+<br>
 <div class="container mt-5">
   <h2 class="display-4 fw-bold text-center" style="
       font-family: Edu AU VIC WA NT Hand, cursive;
@@ -13,7 +15,7 @@
 
 
 <div class="skills-container">
-  <div *ngFor="let skill of skills" class="quiz-card">
+  <div *ngFor="let skill of skillslist" class="quiz-card">
     <app-quiz-card [skill]="skill"></app-quiz-card>
   </div>
 </div>
