--- a/src/app/shared/components/spinner/spinner.component.html
+++ b/src/app/shared/components/spinner/spinner.component.html
@@ -3,11 +3,11 @@
     <div class="spinner-grow w-25 h-25" role="status">
         <span class="visually-hidden">Loading...</span>
     </div>
-    
-</div> -->
-<div  class="body d-flex justify-content-center align-items-center">
 
-    <div class="holder">
+</div> -->
+<!-- <div  class="body d-flex justify-content-center align-items-center">
+
+    <div class="loader">
         <div class="circle"></div>
         <div class="circle"></div>
         <div class="circle"></div>
@@ -25,4 +25,8 @@
         <div class="circle"></div>
         <div class="circle"></div>
     </div>
+</div> -->
+
+<div class="loader-container">
+  <div class="loader"></div>
 </div>
