--- a/src/app/shared/components/add-education/add-education.component.html
+++ b/src/app/shared/components/add-education/add-education.component.html
@@ -3,41 +3,41 @@
   <form [formGroup]="educationForm">
     <mat-form-field appearance="fill">
       <mat-label>Degree</mat-label>
-      <input matInput formControlName="degree" />
+      <input matInput formControlName="Degree" />
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>Field of Study</mat-label>
-      <input matInput formControlName="fieldOfStudy" />
+      <input matInput formControlName="FieldOfStudy" />
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>University</mat-label>
-      <input matInput formControlName="university" />
+      <input matInput formControlName="University" />
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>Faculty</mat-label>
-      <input matInput formControlName="faculty" />
+      <input matInput formControlName="Faculty" />
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>Country of Study</mat-label>
-      <input matInput formControlName="countryOfStudy" />
+      <input matInput formControlName="CountryOfStudy" />
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>Start Date</mat-label>
-      <input matInput [matDatepicker]="startPicker" formControlName="startDate" />
+      <input matInput [matDatepicker]="startPicker" formControlName="StartDate" />
       <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
       <mat-datepicker #startPicker></mat-datepicker>
     </mat-form-field>
 
-    <mat-checkbox formControlName="tillNow">Still Studying</mat-checkbox>
+    <mat-checkbox formControlName="TillNow">Still Studying</mat-checkbox>
 
-    <mat-form-field appearance="fill" *ngIf="!educationForm.get('tillNow')?.value">
+    <mat-form-field appearance="fill" *ngIf="!educationForm.get('TillNow')?.value">
       <mat-label>End Date</mat-label>
-      <input matInput [matDatepicker]="endPicker" formControlName="endDate" />
+      <input matInput [matDatepicker]="endPicker" formControlName="EndDate" />
       <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
       <mat-datepicker #endPicker></mat-datepicker>
     </mat-form-field>
