--- a/src/app/shared/components/add-experience/add-experience.component.html
+++ b/src/app/shared/components/add-experience/add-experience.component.html
@@ -4,27 +4,27 @@
 
     <mat-form-field appearance="fill">
       <mat-label>Job</mat-label>
-      <input matInput formControlName="job" />
+      <input matInput formControlName="FieldOfStudy" />
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>Organization</mat-label>
-      <input matInput formControlName="organization" />
+      <input matInput formControlName="Organization" />
     </mat-form-field>
 
 
     <mat-form-field appearance="fill">
       <mat-label>Start Date</mat-label>
-      <input matInput [matDatepicker]="startPicker" formControlName="startDate" />
+      <input matInput [matDatepicker]="startPicker" formControlName="StartDate" />
       <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
       <mat-datepicker #startPicker></mat-datepicker>
     </mat-form-field>
 
-    <mat-checkbox formControlName="tillNow">Still Working There</mat-checkbox>
+    <mat-checkbox formControlName="TillNow">Still Working There</mat-checkbox>
 
-    <mat-form-field appearance="fill" *ngIf="!experienceForm.get('tillNow')?.value">
+    <mat-form-field appearance="fill" *ngIf="!experienceForm.get('TillNow')?.value">
       <mat-label>End Date</mat-label>
-      <input matInput [matDatepicker]="endPicker" formControlName="endDate" />
+      <input matInput [matDatepicker]="endPicker" formControlName="EndDate" />
       <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
       <mat-datepicker #endPicker></mat-datepicker>
     </mat-form-field>
