--- a/src/app/shared/components/edit-experience/edit-experience.component.html
+++ b/src/app/shared/components/edit-experience/edit-experience.component.html
@@ -5,30 +5,30 @@
     <!-- Job Input Field -->
     <mat-form-field appearance="fill">
       <mat-label>Job Title</mat-label>
-      <input matInput formControlName="job" placeholder="Enter Job Title" />
+      <input matInput formControlName="FieldOfStudy" placeholder="Enter Job Title" />
     </mat-form-field>
 
     <!-- Organization Input Field -->
     <mat-form-field appearance="fill">
       <mat-label>Organization</mat-label>
-      <input matInput formControlName="organization" placeholder="Enter Organization Name" />
+      <input matInput formControlName="Organization" placeholder="Enter Organization Name" />
     </mat-form-field>
 
     <!-- Start Date Input Field -->
     <mat-form-field appearance="fill">
       <mat-label>Start Date</mat-label>
-      <input matInput [matDatepicker]="startPicker" formControlName="startDate" placeholder="Choose a start date" />
+      <input matInput [matDatepicker]="startPicker" formControlName="StartDate" placeholder="Choose a start date" />
       <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
       <mat-datepicker #startPicker></mat-datepicker>
     </mat-form-field>
 
     <!-- Checkbox for "Till Now" -->
-    <mat-checkbox formControlName="tillNow">Still Working Here</mat-checkbox>
+    <mat-checkbox formControlName="TillNow">Still Working Here</mat-checkbox>
 
     <!-- End Date Input Field, Conditionally Visible -->
-    <mat-form-field appearance="fill" *ngIf="!experienceForm.get('tillNow')?.value">
+    <mat-form-field appearance="fill" *ngIf="!experienceForm.get('TillNow')?.value">
       <mat-label>End Date</mat-label>
-      <input matInput [matDatepicker]="endPicker" formControlName="endDate" placeholder="Choose an end date" />
+      <input matInput [matDatepicker]="endPicker" formControlName="EndDate" placeholder="Choose an end date" />
       <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
       <mat-datepicker #endPicker></mat-datepicker>
     </mat-form-field>
