make changes in quizzes and profile

--- a/src/app/shared/components/quizzes-details/quizzes-details.component.css
+++ b/src/app/shared/components/quizzes-details/quizzes-details.component.css
@@ -45,6 +45,7 @@ button.btn-primary {
   border-color:  #415bcf;
   padding: 10px 20px;
   font-size: 1.1rem;
+  text-align: center;
 }
 
 button.btn-primary:hover {
