--- a/src/app/shared/components/changepassword/changepassword.component.html
+++ b/src/app/shared/components/changepassword/changepassword.component.html
@@ -5,52 +5,52 @@
     </div>
     <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
-        <label for="oldPassword">Old Password</label>
+        <label for="CurrentPassword">Old Password</label>
         <input
           type="password"
-          id="oldPassword"
+          id="CurrentPassword"
           class="form-control"
-          formControlName="oldPassword"
-          [ngClass]="{ 'is-invalid': changePasswordForm.get('oldPassword')?.touched && changePasswordForm.get('oldPassword')?.invalid }"
+          formControlName="CurrentPassword"
+          [ngClass]="{ 'is-invalid': changePasswordForm.get('CurrentPassword')?.touched && changePasswordForm.get('CurrentPassword')?.invalid }"
         />
-        <div *ngIf="changePasswordForm.get('oldPassword')?.hasError('required') && changePasswordForm.get('oldPassword')?.touched" class="invalid-feedback">
+        <div *ngIf="changePasswordForm.get('CurrentPassword')?.hasError('required') && changePasswordForm.get('CurrentPassword')?.touched" class="invalid-feedback">
           Old password is required.
         </div>
-        <div *ngIf="changePasswordForm.get('oldPassword')?.hasError('incorrectOldPassword') && changePasswordForm.get('oldPassword')?.touched" class="invalid-feedback">
+        <div *ngIf="changePasswordForm.get('CurrentPassword')?.hasError('incorrectOldPassword') && changePasswordForm.get('CurrentPassword')?.touched" class="invalid-feedback">
           Old password is incorrect.
         </div>
       </div>
 
       <div class="form-group">
-        <label for="newPassword">New Password</label>
+        <label for="NewPassword">New Password</label>
         <input
           type="password"
-          id="newPassword"
+          id="NewPassword"
           class="form-control"
-          formControlName="newPassword"
-          [ngClass]="{ 'is-invalid': changePasswordForm.get('newPassword')?.touched && changePasswordForm.get('newPassword')?.invalid }"
+          formControlName="NewPassword"
+          [ngClass]="{ 'is-invalid': changePasswordForm.get('NewPassword')?.touched && changePasswordForm.get('NewPassword')?.invalid }"
         />
-        <div *ngIf="changePasswordForm.get('newPassword')?.hasError('required') && changePasswordForm.get('newPassword')?.touched" class="invalid-feedback">
+        <div *ngIf="changePasswordForm.get('NewPassword')?.hasError('required') && changePasswordForm.get('NewPassword')?.touched" class="invalid-feedback">
           New password is required.
         </div>
-        <div *ngIf="changePasswordForm.get('newPassword')?.hasError('minlength') && changePasswordForm.get('newPassword')?.touched" class="invalid-feedback">
+        <div *ngIf="changePasswordForm.get('NewPassword')?.hasError('minlength') && changePasswordForm.get('NewPassword')?.touched" class="invalid-feedback">
           New password must be at least 6 characters.
         </div>
-        <div *ngIf="changePasswordForm.get('newPassword')?.hasError('pattern') && changePasswordForm.get('newPassword')?.touched" class="invalid-feedback">
+        <div *ngIf="changePasswordForm.get('NewPassword')?.hasError('pattern') && changePasswordForm.get('NewPassword')?.touched" class="invalid-feedback">
           New password must be at has one captial letter and number and specific charachter
         </div>
       </div>
 
       <div class="form-group">
-        <label for="confirmPassword">Confirm Password</label>
+        <label for="ConfirmPassword">Confirm Password</label>
         <input
           type="password"
-          id="confirmPassword"
+          id="ConfirmPassword"
           class="form-control"
-          formControlName="confirmPassword"
-          [ngClass]="{ 'is-invalid': changePasswordForm.get('confirmPassword')?.touched && changePasswordForm.get('confirmPassword')?.invalid }"
+          formControlName="ConfirmPassword"
+          [ngClass]="{ 'is-invalid': changePasswordForm.get('ConfirmPassword')?.touched && changePasswordForm.get('ConfirmPassword')?.invalid }"
         />
-        <div *ngIf="changePasswordForm.hasError('passwordsMismatch') && changePasswordForm.get('confirmPassword')?.touched" class="invalid-feedback">
+        <div *ngIf="changePasswordForm.hasError('passwordsMismatch') && changePasswordForm.get('ConfirmPassword')?.touched" class="invalid-feedback">
           Passwords do not match.
         </div>
       </div>
