--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -48,7 +48,7 @@
                   required
                 /> -->
                 <div class="form-group mb-3">
-                  <label for="password">Password</label>
+                  <label for="Password">Password</label>
                   <br>
                   <input
                     type="password"
@@ -64,26 +64,16 @@
               </div>
 
 
-              <!-- Remember Me checkbox -->
-              <!-- <div class="form-group form-check mb-3">
-                <input
-                  type="checkbox"
-                  formControlName="LoginMethod"
-                  [(ngModel)]="Rememberme"
-                  [ngModelOptions]="{standalone: true}"
-                  class="form-check-input"
-                  id="rememberMe"
-                />
-                <label class="form-check-label" for="rememberMe">Remember me</label>
-              </div> -->
+
+
               <div class="form-group form-check mb-3">
                 <input
                   type="checkbox"
-                  formControlName="LoginMethod"
+                  formControlName="Rememberme"
                   class="form-check-input"
-                  id="rememberMe"
+                  id="Rememberme"
                 />
-                <label class="form-check-label" for="rememberMe">Remember me</label>
+                <label class="form-check-label" for="Rememberme">Remember me</label>
               </div>
               <button type="submit"  [disabled]="form.invalid"  class="btn-custom mx-auto d-block">Login</button>
             </form>
