--- a/src/app/shared/components/quiz-card/quiz-card.component.css
+++ b/src/app/shared/components/quiz-card/quiz-card.component.css
@@ -4,7 +4,7 @@
   color: #ffffff;
   border-radius: 10px;
   padding: 20px;
-  max-width: 350px;
+  width: 100%;
   text-align: center;
   margin: 20px auto;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
