--- a/src/app/shared/components/quiz-card/quiz-card.component.html
+++ b/src/app/shared/components/quiz-card/quiz-card.component.html
@@ -1,7 +1,7 @@
 <div class="quiz-card">
   <div class="card-content">
     <h5 class="skill-name">{{ skill.Name }}</h5>
-    <small class="skill-description text-muted">{{ skill.description }}</small>
+    <!-- <small class="skill-description text-muted">{{ skill.description }}</small> -->
   </div>
 
   <div class="card-actions">
