--- a/src/app/shared/components/quizzes-list/quizzes-list.component.css
+++ b/src/app/shared/components/quizzes-list/quizzes-list.component.css
@@ -1,7 +1,7 @@
 .skills-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   gap: 100px;
 }
 
